Fix font-size blurriness

--- a/less/style.less
+++ b/less/style.less
@@ -263,7 +263,7 @@ body {
     color: @color-text;
     background-color: var(--color-darker);
     font-family: Verdana, Geneva, sans-serif;
-    font-size: 105%;
+    font-size: 13pt;
     text-align: center;
     min-height: 100%;
     overflow-y: scroll;
